<resources>
    <string name="app_name">SmartKettleBell</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="recordData">Record Data</string>
    <string name="recording">Recording</string>
    <string name="title_activity_side_bar_test">SideBarTest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test">test</string>
    <string name="home">Home</string>
    <string name="training">Training</string>
    <string name="schedule">Schedule</string>
    <string name="data">Data</string>
    <string name="setting">Setting</string>
    <!-- : Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="challenge">Challenge</string>
    <string name="add_plan">add plan</string>
    <string name="title_activity_add_training_plan">AddTrainingPlanActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="scan">scan</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="start">Start</string>
    <string name="Complete">Complete</string>
    <!-- Events Adder-->
    <!--    <string name="app_name">Adding an event</string>-->
    <string-array name="exercises">
        <item>划船</item>
        <item>硬舉</item>
        <item>擺盪</item>
    </string-array>
    <string-array name="numbers">
        <item>1組</item>
        <item>2組</item>
        <item>3組</item>
        <item>4組</item>
        <item>5組</item>
        <item>6組</item>
        <item>7組</item>
        <item>8組</item>
        <item>9組</item>
        <item>10組</item>
    </string-array>
    >
    <string name="spnEx_prompt">動作</string>
    <string name="spnSet_prompt">組數</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_event">Adding an event</string>
    <string name="Scan">Scan</string>
    <string name="Scanning">Scanning</string>
    <string name="history">History</string>
    <!-- Events Adder-->


</resources>