<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.schedule.EventsAdderDialogActivity">

    <Spinner
        android:id="@+id/spnExcs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/exercises"
        android:prompt="@string/spnEx_prompt" />

    <Spinner
        android:id="@+id/spnSets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:entries="@array/numbers"
        android:prompt="@string/spnSet_prompt" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add" />
</LinearLayout>